# tfm_solver

./: .gitignore  Cargo.toml  build.rs  config.yaml
postprocessing/: compute_isosurfaces.jl  process_isosurfaces.jl  rename_files.py  surface_figure.jl  surface_heatmap.jl
runner/: runner.py
src/: benchmarking.rs  config.rs  dists.rs  float.rs  io.rs  main.rs  math.rs  solver.rs  types.rs
utils/: generate_case.sh  plot_matrix.py  solver.job  template.job
